# rust-onnx-service

./: Cargo.toml
resources/test_scripts/: inference.sh
src/: main.rs
