[package]
name = "rust-onnx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros", "multipart"] }
bytes = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full", "tokio-macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tract-onnx = "0.22.0"
