[package]
name = "rust-onnx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["http2", "macros", "multipart"] }
bytes = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full", "tokio-macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ort = "=2.0.0-rc.10"
moka = { version = "0.12.11", features = ["future"] }
reqwest = "0.12.24"
